  30. New ZapperMasks: +ISHOME -ISHOME, for masking mobs who are away from their areas
  31. Prop_*Adjuster now supports multiplying values, see help on Prop_HaveAdjuster
  32. Concierge behavior can now create portals if you want.
  33. Stolen property (property taken from a home or owned ship) cannot be sold to shopkeepers.
  34. New Thief/Sailor Skills: Sea Legs, Ride the Rigging, Belay, Buried Treasure, Wenching
  35. New Thief/Sailor Skills: Treasure Map, Walk the Plank, Sea Mapping, Plunder, Sea Charting
  36. New Thief/Sailor Skills: Dead Reckoning, Sea Navigation, Scuttle
# Build 5.9.3 Released 05/08/2016
   1. Follower behavior now has a few more options.
   2. STAT [MOBNAME] will now give full editor stats also, and 
   3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
   4. New Locales: WaterSurfaceColumn and UnderWaterColumnGrid, and Salt water varieties.
   5. LIST TIMEZONES can now show all your areas grouped by common calendar.
   6. Smelting recipes are now editable from MG and CL.
   7. Prop_OpenPassword can now have a language qualifier
   8. LIST AREA SHOPS will now show local shop inventories with prices
   9. Archon QUESTS [QUEST NAME] and LIST QUESTWINNERS can now show all winners of quests.
  10. New CHANNEL flag: NOLANGUAGE, to turn off foreign languages when using the channel.
  11. LIST QUESTNAMES can show a map between quest names (ids) and display names.
  12. LIST ABILITYDOMAINS will show a list of, well, ability domains
  13. ID on private property will now show size and features, as will VIEW of titles on shopkeepers.
  14. Scripting trigger matches P syntax now truly is Precise (noteable bug fix).
  15. Conquerable will now transfer private property to conqueror, see new OWNERSHIP flag.
  16. Prop_Lot*ForSale and Prop_RoomPlus now support grid-connecting the walls of rooms for looping.
  17. New Scriptable commands: MPOLOADSHOP and MPMLOADSHOP, and funcs: SHOPHAS, SHOPITEM, NUMITEMSSHOP