@@ -1113,6 +1113,8 @@ public interface CMMsg extends CMCommon
 	public static final int TYP_COMMAND=121;
 	/** MINOR_MASK minor action code type, denoting a completed item generation activty */
 	public static final int TYP_ITEMGENERATED=122;
+	/** MINOR_MASK minor action code type, denoting a standard combat miss */
+	public static final int TYP_ATTACKMISS=123;
 
 	/** MINOR_MASK minor action code type, denoting a channel action -- 2000-2047 are channels*/
 	public static final int TYP_CHANNEL=2000; //(2000-2047 are channels)
@@ -1140,7 +1142,7 @@ public interface CMMsg extends CMCommon
 		"LIFE", "BID", "CLANEVENT", "UNLOAD", "DUELCHALLENGE", "LEGALWARRANT", "DIG",
 		"PREINVOKE","POSSESS","DISPOSSESS","POWERCURRENT","CONTEMPLATE","POUR","LOOKEXITS",
 		"LASER","SONIC","REPAIR","ENHANCE","INSTALL","COLLISION","AROMA","DUELLOSS",
-		"COMMANDFAIL","METACOMMAND", "ITEMGENERATED"
+		"COMMANDFAIL","METACOMMAND", "ITEMGENERATED", "ATTACKMISS"
 	};
 
 	/** Index string descriptions of all the MAJOR_MASK code MAKS_s */
@@ -1446,6 +1448,8 @@ public interface CMMsg extends CMCommon
 	public static final int MSG_COMMANDFAIL=MASK_ALWAYS|TYP_COMMANDFAIL;
 	/** combined MAJOR and MINOR codes for useful event message type for a fail to target in a command */
 	public static final int MSG_COMMAND=MASK_ALWAYS|CMMsg.MASK_CNTRLMSG|TYP_COMMAND;
+	/** combined MAJOR and MINOR codes for useful event message type for a failed combat attack */
+	public static final int MSG_ATTACKMISS=MASK_HANDS|MASK_SOUND|MASK_MOVE|TYP_ATTACKMISS;
 	
 	/**
 	 * An enum to use for an external message check from inside 
