@@ -1590,6 +1590,19 @@ You can enter MOOD LIST to get a list of valid moods.  Be aware that \
 sometimes a mean mood can actually have an affect on the people you \
 speak to!
 
+NOBATTLESPAM=\
+Command : NOBATTLESPAM (ON/OFF)\n\r\
+Usage   : NOBATTLESPAM\ (ON/OFF)n\r\
+Example : nobattlespam\n\r\
+Example : nobattlespam on\n\r\
+Short(s): \n\r\
+Changes whether you see normal combat messages, including standard weapon \
+hits and misses, and most damage messages.  When turned on, the player \
+will only receive a brief summary of all damage taken by each combatant. \
+By itself, this command will \
+toggle the state of the flag.  Use ON or OFF to specify whether the flag \
+is on or off.  See also CONFIG.
+	
 NOCOLOR=NOANSI
 NOCOLOUR=NOANSI
 NOANSI=\
